# mental_math_trainer

./: pyproject.toml
src/mental_math_trainer/: __main__.py  addition.tcss
