[project]
name = "mental-math-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raul Casanova", email = "raul.casanova.03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.3",
]

[project.scripts]
mental-math-trainer = "mental_math_trainer:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "textual-dev>=1.8.0",
]
